# kalah_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  functions.c  functions.h  main.c
.github/workflows/: makefile.yml
src/: functions.c  functions.h  main.c  score_saving_file.txt
